--- a/views/connect.ejs
+++ b/views/connect.ejs
@@ -24,11 +24,7 @@
                         <input type="password" name="password" for="password"/>
                     </div>
                     <div>
-<<<<<<< HEAD
-                        <input class="btn btn-primary" type="submit" value="Connexion"/>
-=======
-                        <input class="btn-agree" type="submit" value="Log In"/>
->>>>>>> graphic
+                        <input class="btn-agree" type="submit" value="Connexion"/>
                     </div>
                 </form>
             </div>
